Fixed pool tests